# linx-mongoose

./: .gitignore  LICENSE  Makefile  README.md  readme.md
.trae/documents/: linx_websocket_sdk_architecture.md  linx_websocket_sdk_demo.md  linx_websocket_sdk_requirements.md
demo/: Makefile
demo/mac/: Makefile  linx_demo.c
docs/: usage_guide.md  websocket接入.md
examples/: basic_example.c
include/: linx_websocket_sdk.h
sdk/: CMakeLists.txt  Makefile  linx_sdk.c  linx_sdk.h  run.sh  test_linx_sdk.c
sdk/audio/: CMakeLists.txt  README.md  esp32_i2s.c  esp32_i2s.h
sdk/cjson/: CMakeLists.txt  cjsonConfig.cmake.in  cjson_config.h.in  libcjson.pc.in
sdk/cmake/: FindMongoose.cmake  FindOpus.cmake  FindPortAudio.cmake  GenerateHeaders.cmake  PlatformDetection.cmake
sdk/cmake/templates/: linx_config.h.in  linx_version.h.in
sdk/codecs/: CMakeLists.txt  audio_codec.h  codec_factory.c  es8388_codec.c  es8388_codec.h  opus_codec.h
sdk/codecs/test/: CMakeLists.txt  codec_test.c
sdk/log/: CMakeLists.txt
sdk/mcp/: CMakeLists.txt  mcp.h  mcp_property.c  mcp_property.h  mcp_server.c  mcp_server.h  mcp_tool.c  mcp_tool.h  mcp_types.h  mcp_utils.c  mcp_utils.h
sdk/mcp/test/: Makefile  README.md  run_tests.sh  test_integration.c  test_property.c  test_server.c  test_tool.c  test_types.c  test_utils.c
sdk/mcp/test/examples/: calculator_server.c  file_manager_server.c  weather_server.c
sdk/protocols/: CMakeLists.txt  linx_protocol.c  linx_protocol.h  linx_websocket.c  linx_websocket.h
sdk/protocols/test/: Makefile  README.md  audio.opus  example_linx_websocket.c  run_tests.sh  test_linx_protocol.c  test_linx_websocket.c
sdk/protocols/test/examples/: Makefile  README.md  example_linx_protocol.c  example_linx_websocket.c  run_examples.sh
sdk/test/: run.sh  test_mcp.c  test_mcp_json.c  test_mcp_simple.c  test_protocol.c  test_tool_call.c
src/: linx_audio.c  linx_connection.c  linx_internal.h  linx_json.c  linx_log.c  linx_log.h  linx_utils.c  linx_websocket_sdk.c
